fix: correctly filling screen size on mobile browsers

--- a/src/app/core/ui/ui/ui.component.scss
+++ b/src/app/core/ui/ui/ui.component.scss
@@ -34,7 +34,6 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  height: calc(100vh - 64px); // fill window: view height - toolbar
 }
 
 .sidenav-menu {
@@ -53,15 +52,19 @@ body {
 
 .sidenav-content {
   padding: 24px;
-  height: calc(100vh - 114px); // fill window: view height - toolbar & margins
-}
-/* reduce padding for content when screen size is too small */
-@media (max-width: 599px) {
-  .sidenav-content {
+  @media (max-width: 599px) {
     padding: 12px;
-    height: calc(100vh - 90px); // fill window: view height - toolbar & margins
   }
+
+  /* make this fullscreen while respecting padding: https://stackoverflow.com/a/485887/1473411 */
+  position: absolute;
+  height: auto;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
 }
+
 
 .header-icon {
   color: white;
